fix feed image overlap height bug

--- a/source/sass/modules/_feed.scss
+++ b/source/sass/modules/_feed.scss
@@ -148,7 +148,7 @@
         }
 
         .image--tall {
-            height: 37vw;
+            // height: 37vw;
             width: auto;
 
             @include respond( $mobile-breakpoint ) {
